src/index.css
@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");
body {
  margin: 0;
  font-family: "Roboto Mono", monospace;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas,
    "Courier New", monospace;
}

